<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_ui_appearance">

        <ListPreference
            app:layout="@layout/uwu_sin"
            app:defaultValue="uwu_shape_cookie"
            app:entries="@array/icon_shape_entries"
            app:entryValues="@array/icon_shape_values"
            app:icon="@drawable/ic_shape_outline"
            app:key="iconShape"
            app:summary="%s"
            app:title="@string/title_pref_icon_shape" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/home_banner_category">

        <SwitchPreferenceCompat
            app:layout="@layout/uwu_top_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_home_24"
            app:key="pref_show_home_banner"
            app:summary="@string/home_banner_show_summary"
            app:title="@string/home_banner_show_title" />

        <io.nekohasekai.sagernet.ui.dialog.BannerHeightSliderDialog
            app:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_photo_size_select_large_24"
            app:key="pref_home_banner_height"
            app:title="@string/pref_home_banner_height_title"
            app:dependency="pref_show_home_banner" />

        <io.nekohasekai.sagernet.ui.dialog.HeaderTopRowPaddingDialog
            app:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_vertical_align_top_24"
            app:key="pref_header_top_row_padding"
            app:title="@string/pref_header_top_row_padding_title"
            app:dependency="pref_show_home_banner" />

        <Preference
            app:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_image_photo"
            app:key="action_change_home_banner_image"
            app:summary="@string/home_banner_custom_summary"
            app:title="@string/home_banner_custom_title"
            app:dependency="pref_show_home_banner" />

        <Preference
            app:layout="@layout/uwu_bot"
            app:icon="@drawable/baseline_delete_sweep_24"
            app:key="action_delete_home_banner_image"
            app:summary="@string/home_banner_delete_summary"
            app:title="@string/home_banner_delete_title"
            app:dependency="pref_show_home_banner" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sheet_banner_category">

        <SwitchPreferenceCompat
            app:layout="@layout/uwu_top_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_sparkles_24dp"
            app:key="disableParticlesSheet"
            app:summary="@string/particles_disable_summary"
            app:title="@string/particles_disable_title" />

        <Preference
            app:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_image_photo"
            app:key="action_pick_sheet_banner"
            app:summary="@string/sheet_banner_custom_summary"
            app:title="@string/sheet_banner_custom_title" />

        <Preference
            app:layout="@layout/uwu_bot"
            app:icon="@drawable/baseline_delete_sweep_24"
            app:key="action_delete_sheet_banner"
            app:summary="@string/sheet_banner_delete_summary"
            app:title="@string/sheet_banner_delete_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/banner_profile_category">

        <EditTextPreference
            app:layout="@layout/uwu_top"
            app:dialogTitle="@string/profile_name_custom_dialog"
            app:icon="@drawable/ic_image_edit"
            app:key="customProfileName"
            app:title="@string/profile_name_custom_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_image_camera_alt"
            app:key="action_pick_profile_banner"
            app:summary="@string/banner_profile_custom_summary"
            app:title="@string/banner_profile_custom_title" />

        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="uwu_shape_cookie"
            app:entries="@array/icon_shape_entries"
            app:entryValues="@array/icon_shape_values"
            app:icon="@drawable/ic_shape_outline"
            app:key="profileBannerShape"
            app:summary="%s"
            app:title="@string/title_profile_banner_shape" />

        <Preference
            app:layout="@layout/uwu_bot"
            app:icon="@drawable/ic_action_delete"
            app:key="action_delete_profile_banner"
            app:summary="@string/delete_custom_banner_profile_summary"
            app:title="@string/delete_custom_banner_profile" />

    </PreferenceCategory>

</PreferenceScreen>
