<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.nekohasekai.sagernet.widget.UwuPreferenceCategory app:title="@string/general_settings"
        app:sectionIcon="@drawable/ic_communication_phonelink_ring">
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_top_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_communication_phonelink_ring"
            app:key="isAutoConnect"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" />
        <Preference
            app:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_palette_24"
            app:key="navigateUiSettings"
            app:summary="@string/summary_navigate_ui_settings"
            app:title="@string/title_ui_settings" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="vpn"
            app:entries="@array/service_modes"
            app:entryValues="@array/service_mode_values"
            app:icon="@drawable/ic_device_developer_mode"
            app:key="serviceMode"
            app:title="@string/service_mode"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="0"
            app:entries="@array/tun_implementation"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="tunImplementation"
            app:title="@string/tun_implementation"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.MTUPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="9000"
            app:entries="@array/mtu_select"
            app:entryValues="@array/mtu_select"
            app:icon="@drawable/baseline_public_24"
            app:key="mtu"
            app:title="@string/mtu" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="1000"
            app:entries="@array/notification_entry"
            app:entryValues="@array/notification_value"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="speedInterval"
            app:title="@string/speed_interval"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_speed_24"
            app:key="showDirectSpeed"
            app:summary="@string/show_direct_speed_sum"
            app:title="@string/show_direct_speed"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:key="showGroupInNotification"
            app:title="@string/show_group_in_notification" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:icon="@drawable/ic_device_data_usage"
            app:key="meteredNetwork"
            app:summary="@string/metered_summary"
            app:title="@string/metered" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:icon="@drawable/baseline_developer_board_24"
            app:key="acquireWakeLock"
            app:summary="@string/acquire_wake_lock_summary"
            app:title="@string/acquire_wake_lock" />
        <moe.matsuri.nb4a.ui.LongClickListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="0"
            app:entries="@array/log_level"
            app:entryValues="@array/int_array_5"
            app:icon="@drawable/ic_baseline_bug_report_24"
            app:key="logLevel"
            app:title="@string/log_level"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.EditConfigPreference
            app:layout="@layout/uwu_bot"
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="globalCustomConfig"
            app:title="@string/custom_config"
            app:useSimpleSummaryProvider="true" />
    </io.nekohasekai.sagernet.widget.UwuPreferenceCategory>

    <io.nekohasekai.sagernet.widget.UwuPreferenceCategory app:title="@string/cag_route"
        app:sectionIcon="@drawable/ic_navigation_apps">
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_top_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:icon="@drawable/ic_navigation_apps"
            app:key="proxyApps"
            app:summary="@string/proxied_apps_summary"
            app:title="@string/proxied_apps" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="bypassLan"
            app:title="@string/route_opt_bypass_lan" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:key="bypassLanInCore"
            app:title="@string/bypass_lan_in_core" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="1"
            app:entries="@array/traffic_sniffing_values"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_manage_search_24"
            app:key="trafficSniffing"
            app:title="@string/traffic_sniffing"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:icon="@drawable/baseline_wrap_text_24"
            app:key="resolveDestination"
            app:summary="@string/resolve_destination_summary"
            app:title="@string/resolve_destination" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="0"
            app:entries="@array/ipv6_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_image_looks_6"
            app:key="ipv6Mode"
            app:title="@string/ipv6"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:layout="@layout/uwu_bot"
            app:defaultValue="0"
            app:entries="@array/rules_dat_provider"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_rule_folder_24"
            app:key="rulesProvider"
            app:title="@string/route_rules_provider"
            app:useSimpleSummaryProvider="true" />
    </io.nekohasekai.sagernet.widget.UwuPreferenceCategory>

    <io.nekohasekai.sagernet.widget.UwuPreferenceCategory app:title="@string/cag_dns"
        app:sectionIcon="@drawable/ic_action_dns">
        <EditTextPreference
            app:layout="@layout/uwu_top"
            app:defaultValue="https://dns.google/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="remoteDns"
            app:title="@string/remote_dns"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_remote"
            app:title="@string/domain_strategy_for_remote"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="https://223.5.5.5/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="directDns"
            app:title="@string/direct_dns"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_direct"
            app:title="@string/domain_strategy_for_direct"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_server"
            app:title="@string/domain_strategy_for_server"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_camera_24"
            app:key="enableDnsRouting"
            app:summary="@string/dns_routing_message"
            app:title="@string/enable_dns_routing" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_bot_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_action_lock"
            app:key="enableFakeDns"
            app:summary="@string/fakedns_message"
            app:title="@string/enable_fakedns" />
    </io.nekohasekai.sagernet.widget.UwuPreferenceCategory>

    <io.nekohasekai.sagernet.widget.UwuPreferenceCategory app:title="@string/inbound_settings"
        app:sectionIcon="@drawable/ic_maps_directions_boat">
        <EditTextPreference
            app:layout="@layout/uwu_top"
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="mixedPort"
            app:title="@string/port_proxy"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:defaultValue="false"
            app:key="appendHttpProxy"
            app:summary="@string/append_http_proxy_sum"
            app:title="@string/append_http_proxy" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_bot_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:icon="@drawable/ic_baseline_nat_24"
            app:key="allowAccess"
            app:summary="@string/allow_access_sum"
            app:title="@string/allow_access" />
    </io.nekohasekai.sagernet.widget.UwuPreferenceCategory>

    <io.nekohasekai.sagernet.widget.UwuPreferenceCategory app:title="@string/cag_misc"
        app:sectionIcon="@drawable/ic_baseline_cast_connected_24">
        <moe.matsuri.nb4a.ui.UrlTestPreference
            app:layout="@layout/uwu_top"
            app:defaultValue="http://cp.cloudflare.com/"
            app:icon="@drawable/ic_baseline_cast_connected_24"
            app:key="connectionTestURL"
            app:title="@string/connection_test_url"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:icon="@drawable/baseline_construction_24"
            app:key="enableClashAPI"
            app:summary="@string/enable_clash_api_summary"
            app:title="@string/enable_clash_api" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="networkChangeResetConnections"
            app:title="@string/network_change_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:key="wakeResetConnections"
            app:title="@string/wake_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:icon="@drawable/ic_action_lock_open"
            app:key="globalAllowInsecure"
            app:title="@string/global_allow_insecure" />
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:key="allowInsecureOnRequest"
            app:title="@string/allow_insecure_on_request_sum" />
        <ListPreference
            app:layout="@layout/uwu_bot"
            app:defaultValue="1.2"
            app:entries="@array/app_tls_version"
            app:entryValues="@array/app_tls_version"
            app:key="appTLSVersion"
            app:title="@string/app_tls_version"
            app:useSimpleSummaryProvider="true" />
    </io.nekohasekai.sagernet.widget.UwuPreferenceCategory>
</PreferenceScreen>
