<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:layout="@layout/uwu_sin"
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="name"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <io.nekohasekai.sagernet.widget.UwuPreferenceCategory app:title="@string/proxy_cat"
        app:sectionIcon="@drawable/ic_hardware_router">
        <EditTextPreference
            app:layout="@layout/uwu_top"
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:layout="@layout/uwu_mid"
            app:entries="@array/ss_enc_method_value"
            app:entryValues="@array/ss_enc_method_value"
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="method"
            app:title="@string/enc_method"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:layout="@layout/uwu_bot"
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="password"
            app:title="@string/password" />
    </io.nekohasekai.sagernet.widget.UwuPreferenceCategory>

    <io.nekohasekai.sagernet.widget.UwuPreferenceCategory app:title="@string/plugin"
        app:sectionIcon="@drawable/baseline_construction_24">
        <ListPreference
            app:layout="@layout/uwu_top"
            app:defaultValue=""
            app:entries="@array/box_shadowsocks_plugins"
            app:entryValues="@array/box_shadowsocks_plugins"
            app:icon="@drawable/baseline_construction_24"
            app:key="pluginName"
            app:title="@string/plugin"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:layout="@layout/uwu_bot"
            app:icon="@drawable/ic_action_settings"
            app:key="pluginConfig"
            app:title="@string/plugin_configure"
            app:useSimpleSummaryProvider="true" />
    </io.nekohasekai.sagernet.widget.UwuPreferenceCategory>

    <io.nekohasekai.sagernet.widget.UwuPreferenceCategory app:title="sing-box server"
        app:sectionIcon="@drawable/ic_hardware_router">
        <SwitchPreferenceCompat
            app:layout="@layout/uwu_sin_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            app:key="sUoT"
            app:title="UDP over TCP" />
    </io.nekohasekai.sagernet.widget.UwuPreferenceCategory>

</PreferenceScreen>